// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Render must match isChecked() 1`] = `
<div>
  <div
    class="m-0 form-checkbox"
  >
    <label
      for="checkbox"
    >
      <input
        aria-describedby="help-text-for-checkbox"
        checked=""
        type="checkbox"
      />
      is checked
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> Render must match isCheckedInactive() 1`] = `
<div>
  <div
    class="m-0 form-checkbox checkbox-inactive"
  >
    <label
      for="checkbox"
    >
      <input
        aria-describedby="help-text-for-checkbox"
        checked=""
        type="checkbox"
      />
      is checked
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> Render must match isNotChecked() 1`] = `
<div>
  <div
    class="m-0 form-checkbox"
  >
    <label
      for="checkbox"
    >
      <input
        aria-describedby="help-text-for-checkbox"
        type="checkbox"
      />
      is not checked
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> Render must match isNotCheckedInactive() 1`] = `
<div>
  <div
    class="m-0 form-checkbox checkbox-inactive"
  >
    <label
      for="checkbox"
    >
      <input
        aria-describedby="help-text-for-checkbox"
        type="checkbox"
      />
      is not checked
    </label>
  </div>
</div>
`;
